Add daily code challenge to week 4 folder, and add updates

--- a/Calculator_Push_Work/index.html
+++ b/Calculator_Push_Work/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <main>
-        <div> <!--  Calculator body container -->
-            <div> <!--  Calculator output container -->
+        <div id="calculatorBody"> <!--  Calculator body container -->
+            <div id="calculatorScreen"> <!--  Calculator output container -->
             </div>
-            <div> <!--  Calculator buttons container -->
+            <div id="calculatorButtonsBody"> <!--  Calculator buttons container -->
                 <span class="button">7</span>
                 <span class="button">8</span>
                 <span class="button">9</span>
